# rnn

./: .gitignore  Cargo.toml
actix_server/: Cargo.toml
actix_server/src/: main.rs
console_app/: Cargo.toml
console_app/src/: main.rs
console_ui/: Cargo.toml
console_ui/src/: app.rs  lib.rs  take_event.rs  ui.rs
console_ui/src/ui/: mod.rs  render_accumulated_weights.rs  render_distance_weights.rs  render_neurons.rs  (+1 more)
csv_stream/: Cargo.toml
csv_stream/src/: lib.rs
data_streams/: Cargo.toml
data_streams/src/: lib.rs
prediction_server/: Cargo.toml
prediction_server/src/: main.rs
rnn_core/: Cargo.toml  README.md
rnn_core/src/: apply_synapses.cl  apply_synapses.rs  data_layer.rs  get_synapse_mask.rs  layer.rs  lib.rs  network.rs  neuron.rs  recount_accumulated_weights.cl  recount_accumulated_weights.rs  recount_refract_intervals.rs  structures.rs
rnn_core/src/logger/: file_logger.rs  logger.rs  mod.rs  structures.rs
rnn_core/src/spiral/: mod.rs
rnn_instance/: Cargo.toml  drawdata.plt
rnn_instance/src/: init_by_toml.rs  init_data_layer.rs  init_network.rs  lib.rs  main.rs
scheduler/: Cargo.toml
scheduler/src/: main.rs
timeline_helpers/: Cargo.toml
timeline_helpers/src/: bits_to_number.rs  complex_timeline.rs  datetime_timeline.rs  enum_timeline.rs  float_timeline.rs  init_timeline_by_config.rs  integer_timeline.rs  lib.rs  number_to_bits.rs  structures.rs
training_server/: Cargo.toml
training_server/src/: main.rs
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  Form.tsx  main.tsx  types.ts
(+8 files in other folders)
